[package]
name = "csplib"
version = "0.1.0"
authors = ["Màrius Montón <marius.monton@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
serialport = "4.1.0"
bytes = "1.1.0"
crc = "3.0.0"
log = "0.4"
pretty_env_logger = "0.4.0"
